--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pasar",
-  "version": "1.3.5+",
+  "version": "1.3.6",
   "description": "Promise Aware Smart API REST builder to easily implement Express routers with advanced capabilities.",
   "main": "index.js",
   "scripts": {
@@ -30,7 +30,7 @@
     "bluebird": "^2.10.2",
     "chalk": "^1.1.3",
     "deasync": "^0.1.0",
-    "express": "~4.12.4",
+    "express": "^4.16.3",
     "extend": "^3.0.0",
     "jade": "^1.11.0",
     "json2xls-xml": "0.0.12"
